- Added a littlebit more height to the passworddialog.
- Changed email toplevel domain name validation so new toplevel domains are also accepted
- Calendar: Month view: no need to left-click an event before right-clicking it anymore.
- Fixed max length problem in customfields.

20-08-2014 5.0.78
- Upgrade broken because of to strict permissions
- Translation errors fixed
- Bangladesh translation added.
- GOTA: Changed moveuploadedfile flag in replace function
- Billing: Fixed problem with linking orders that don't have a status yet.

13-08-2014 5.0.77
- Addressbook/Email templates: Fixed problem with template parsing and offset for "IF" statements.
- Added config 2 options for the files module to remove the addressbooks/projects folders from the files tree:
	$config['files_show_addressbooks'] = true;
	$config['files_show_projects'] = true;

08-08-2014 5.0.76
- Add xss prevention headers
- Secured maintenance tools
- Removed deprecated sites module
- Address book / Search : The "Name 2" field now used in the search cache for all future companies, or, if you recreate the search cache, for all companies with Name 2.
- Email: Fixed copying of multiple messages. Also set the "SEEN" flag on the copied messages
- Files will be sorted by filesize correctly
- Reminders can be removed from a task
- Calendar: Fixed problem with strtotime and the YYYY.MM.DD date format in the recurrence pattern calculation
- When renaming a mailbox folder the current name will display in the dialog
- Expunged email will be removed just before store load again
- Users: Admin's Users Grid: sort order of name now according to current user's settings.
- Bookmarks: URL validation in Bookmark URLs extended to also allow URLs like https://wiki:username@wiki.mydomain.org
- Custom fields: Future encrypted Custom Fields become TEXT fields in database.
- Projects: Tags like {project:name} and {project:path} now available for the Name and Description fields of Project Template Actions.

31-07-2014 5.0.75