@@ -1,3 +1,4 @@
+- Calendar: Disable context menu item "Create email for participants" when it's a private event and it's not yours.
 - Added a littlebit more height to the passworddialog.
 - Changed email toplevel domain name validation so new toplevel domains are also accepted
 - Calendar: Month view: no need to left-click an event before right-clicking it anymore.
